[gd_scene load_steps=2 format=3 uid="uid://cgotsvr67h3x7"]

[ext_resource type="Script" path="res://scripts/create_account/create_account.gd" id="1_h6kov"]

[node name="root" type="Node2D"]
position = Vector2(360, 540)
script = ExtResource("1_h6kov")
metadata/_edit_horizontal_guides_ = [-48.0]
metadata/_edit_vertical_guides_ = [360.0, 527.0]

[node name="device_connection" type="Node2D" parent="."]
position = Vector2(-360, -540)

[node name="form" type="Node2D" parent="device_connection"]

[node name="ssid" type="LineEdit" parent="device_connection/form"]
offset_left = 245.0
offset_top = 137.0
offset_right = 477.0
offset_bottom = 179.0
pivot_offset = Vector2(115, 685)
placeholder_text = "wifi ssid"
metadata/_edit_use_anchors_ = true

[node name="password" type="LineEdit" parent="device_connection/form"]
offset_left = 245.0
offset_top = 204.0
offset_right = 477.0
offset_bottom = 245.0
pivot_offset = Vector2(115, 618)
placeholder_text = "password"
metadata/_edit_use_anchors_ = true

[node name="send" type="Button" parent="device_connection"]
offset_left = 194.0
offset_top = 274.0
offset_right = 331.0
offset_bottom = 352.0
pivot_offset = Vector2(166, 548)
text = "Connect oxim
device to
internet"
metadata/_edit_use_anchors_ = true

[node name="already_connected" type="Button" parent="device_connection"]
offset_left = 389.0
offset_top = 274.0
offset_right = 524.0
offset_bottom = 351.0
pivot_offset = Vector2(-29, 548)
text = "Oxim device
already
connected?"
metadata/_edit_use_anchors_ = true

[node name="label" type="LineEdit" parent="device_connection"]
offset_left = 193.0
offset_top = 379.0
offset_right = 526.0
offset_bottom = 410.0
pivot_offset = Vector2(167, 443)
text = "device status"
alignment = 1
editable = false
metadata/_edit_use_anchors_ = true

[node name="status" type="TextEdit" parent="device_connection"]
offset_left = 151.0
offset_top = 425.0
offset_right = 570.0
offset_bottom = 521.0
pivot_offset = Vector2(209, 397)
editable = false
metadata/_edit_use_anchors_ = true

[node name="request" type="HTTPRequest" parent="device_connection"]

[node name="server" type="Node2D" parent="."]
position = Vector2(-360, -540)

[node name="form" type="Node2D" parent="server"]

[node name="username" type="LineEdit" parent="server/form"]
offset_left = 245.0
offset_top = 575.0
offset_right = 476.0
offset_bottom = 616.0
pivot_offset = Vector2(115, 247)
size_flags_horizontal = 6
size_flags_vertical = 4
placeholder_text = "username"
editable = false
metadata/_edit_use_anchors_ = true

[node name="password" type="LineEdit" parent="server/form"]
offset_left = 245.0
offset_top = 642.0
offset_right = 472.0
offset_bottom = 687.0
pivot_offset = Vector2(115, 180)
size_flags_horizontal = 6
size_flags_vertical = 4
placeholder_text = "password"
editable = false
metadata/_edit_use_anchors_ = true

[node name="create_account" type="Button" parent="server"]
offset_left = 194.0
offset_top = 716.0
offset_right = 330.0
offset_bottom = 793.0
pivot_offset = Vector2(166, 106)
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "Create
account"
metadata/_edit_use_anchors_ = true

[node name="log_in" type="Button" parent="server"]
offset_left = 389.0
offset_top = 716.0
offset_right = 524.0
offset_bottom = 793.0
pivot_offset = Vector2(-29, 106)
disabled = true
text = "Log In"
metadata/_edit_use_anchors_ = true

[node name="label" type="LineEdit" parent="server"]
offset_left = 194.0
offset_top = 825.0
offset_right = 528.0
offset_bottom = 856.0
pivot_offset = Vector2(166, -3)
size_flags_horizontal = 6
size_flags_vertical = 4
text = "server status"
alignment = 1
editable = false
metadata/_edit_use_anchors_ = true

[node name="status" type="TextEdit" parent="server"]
offset_left = 149.0
offset_top = 882.0
offset_right = 570.0
offset_bottom = 982.0
pivot_offset = Vector2(211, -60)
size_flags_horizontal = 6
size_flags_vertical = 4
editable = false
metadata/_edit_use_anchors_ = true

[node name="request" type="HTTPRequest" parent="server"]

[node name="device_credentials" type="Node2D" parent="."]
position = Vector2(-360, -540)

[node name="send" type="Button" parent="device_credentials"]
offset_left = 194.0
offset_top = 1079.0
offset_right = 331.0
offset_bottom = 1156.0
pivot_offset = Vector2(166, -257)
disabled = true
text = "Send username
and password to
oxim device"
metadata/_edit_use_anchors_ = true

[node name="already_logged_in" type="Button" parent="device_credentials"]
offset_left = 389.0
offset_top = 1079.0
offset_right = 523.0
offset_bottom = 1156.0
pivot_offset = Vector2(-29, -257)
disabled = true
text = "Oxim device
already logged
in?"
metadata/_edit_use_anchors_ = true

[node name="label" type="LineEdit" parent="device_credentials"]
offset_left = 193.0
offset_top = 1242.0
offset_right = 527.0
offset_bottom = 1273.0
pivot_offset = Vector2(167, -420)
size_flags_horizontal = 3
text = "device status"
alignment = 1
editable = false
metadata/_edit_use_anchors_ = true

[node name="status" type="TextEdit" parent="device_credentials"]
offset_left = 149.0
offset_top = 1318.0
offset_right = 570.0
offset_bottom = 1418.0
pivot_offset = Vector2(211, -496)
size_flags_horizontal = 6
size_flags_vertical = 4
editable = false
metadata/_edit_use_anchors_ = true

[node name="request" type="HTTPRequest" parent="device_credentials"]

[node name="next" type="Button" parent="."]
offset_left = -51.0
offset_top = 923.0
offset_right = 51.0
offset_bottom = 1021.0
disabled = true
text = "Next"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="device_connection/send" to="." method="_on_device_connection_send_pressed"]
[connection signal="pressed" from="device_connection/already_connected" to="." method="_on_device_connection_already_connected_pressed"]
[connection signal="request_completed" from="device_connection/request" to="." method="_on_device_connection_request_completed"]
[connection signal="pressed" from="server/create_account" to="." method="_on_server_create_account_pressed"]
[connection signal="pressed" from="server/log_in" to="." method="_on_server_log_in_pressed"]
[connection signal="request_completed" from="server/request" to="." method="_on_server_request_completed"]
[connection signal="pressed" from="device_credentials/send" to="." method="_on_send_credentials_pressed"]
[connection signal="pressed" from="device_credentials/already_logged_in" to="." method="_on_device_credentials_already_logged_in_pressed"]
[connection signal="request_completed" from="device_credentials/request" to="." method="_on_device_credentials_request_completed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
